--- a/mindspark.html
+++ b/mindspark.html
@@ -5,115 +5,128 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MindSpark TV - CastroHub</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://kit.fontawesome.com/a2e0e6ad65.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Poppins', sans-serif; }
-    .card:hover { transform: translateY(-5px); transition: all 0.3s; }
-    .active-filter { background-color: #fbbf24; color: #1f2937; }
-    .video-iframe { width: 100%; height: 220px; border-radius: 0.5rem; }
+    .hero-bg { background: linear-gradient(135deg, #2563eb, #9333ea); }
+    .video-card:hover { transform: translateY(-5px); transition: all 0.3s; }
+    .filter-btn.active { background-color: #2563eb; color: white; }
   </style>
 </head>
-<body class="bg-gray-50 text-gray-900 flex flex-col min-h-screen">
+<body class="bg-gray-50 flex flex-col min-h-screen">
 
   <!-- Navbar -->
-  <header class="bg-gradient-to-r from-purple-600 to-pink-600 text-white shadow-lg">
+  <header class="bg-white shadow-lg sticky top-0 z-50">
     <div class="container mx-auto flex justify-between items-center py-4 px-6 flex-wrap">
-      <h1 class="text-2xl font-bold tracking-wide">CastroHub</h1>
-      <nav>
-        <ul class="flex flex-wrap space-x-6">
-          <li><a href="index.html" class="hover:text-yellow-300">Home</a></li>
-          <li><a href="about.html" class="hover:text-yellow-300">About</a></li>
-          <li><a href="news.html" class="hover:text-yellow-300">News</a></li>
-          <li><a href="entertainment.html" class="hover:text-yellow-300">Entertainment</a></li>
-          <li><a href="education.html" class="hover:text-yellow-300">Education</a></li>
-          <li><a href="projects.html" class="hover:text-yellow-300">Projects</a></li>
-          <li><a href="mindspark.html" class="font-semibold text-yellow-300">MindSpark TV</a></li>
-          <li><a href="contact.html" class="hover:text-yellow-300">Contact</a></li>
+      <h1 class="text-2xl font-bold text-indigo-700">CastroHub</h1>
+      <button id="menuToggle" class="block md:hidden text-indigo-700 text-2xl focus:outline-none">&#9776;</button>
+      <nav id="navMenu" class="hidden md:flex w-full md:w-auto mt-4 md:mt-0">
+        <ul class="flex flex-col md:flex-row md:space-x-6 gap-2 md:gap-0">
+          <li><a href="index.html" class="hover:text-indigo-600">Home</a></li>
+          <li><a href="about.html" class="hover:text-indigo-600">About</a></li>
+          <li><a href="news.html" class="hover:text-indigo-600">News</a></li>
+          <li><a href="entertainment.html" class="hover:text-pink-600">Entertainment</a></li>
+          <li><a href="education.html" class="hover:text-green-600">Education</a></li>
+          <li><a href="projects.html" class="hover:text-yellow-600">Projects</a></li>
+          <li><a href="mindspark.html" class="font-semibold text-indigo-700">MindSpark TV</a></li>
+          <li><a href="contact.html" class="hover:text-indigo-600">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <!-- Hero Section -->
-  <section class="bg-gradient-to-r from-purple-400 to-pink-400 py-16 text-center text-white">
+  <section class="hero-bg text-white text-center py-20 px-6">
     <h2 class="text-5xl font-bold mb-4">MindSpark TV</h2>
-    <p class="text-lg md:text-xl max-w-2xl mx-auto">
-      Stream the latest videos, educational content, and entertainment from CastroHub’s MindSpark TV.
-    </p>
+    <p class="text-lg md:text-xl max-w-2xl mx-auto">Watch educational, tech, and entertainment videos curated for your learning and fun.</p>
   </section>
 
   <!-- Filters & Search -->
-  <section class="container mx-auto px-6 mt-10">
-    <div class="flex flex-col md:flex-row justify-between items-center bg-white p-4 rounded-lg shadow flex-wrap gap-4">
+  <section class="container mx-auto px-6 py-10">
+    <div class="flex flex-col md:flex-row justify-between items-center gap-4 mb-8">
+      <input type="text" id="searchInput" placeholder="Search videos..." 
+             class="w-full md:w-1/2 border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-indigo-500 focus:outline-none">
       <div class="flex flex-wrap gap-2">
-        <button class="filter-btn px-4 py-2 rounded-lg active-filter" data-category="all">All</button>
-        <button class="filter-btn px-4 py-2 rounded-lg" data-category="Education">Education</button>
-        <button class="filter-btn px-4 py-2 rounded-lg" data-category="Tech">Tech</button>
-        <button class="filter-btn px-4 py-2 rounded-lg" data-category="Entertainment">Entertainment</button>
-        <button class="filter-btn px-4 py-2 rounded-lg" data-category="Music">Music</button>
-      </div>
-      <div class="mt-4 md:mt-0">
-        <input id="videoSearch" type="text" placeholder="Search videos..." 
-               class="border rounded px-3 py-2 w-64 focus:ring-2 focus:ring-yellow-400 focus:outline-none">
+        <button class="filter-btn active px-4 py-2 rounded-lg border border-indigo-600" data-category="all">All</button>
+        <button class="filter-btn px-4 py-2 rounded-lg border border-indigo-600" data-category="Education">Education</button>
+        <button class="filter-btn px-4 py-2 rounded-lg border border-indigo-600" data-category="Tech">Tech</button>
+        <button class="filter-btn px-4 py-2 rounded-lg border border-indigo-600" data-category="Entertainment">Entertainment</button>
+        <button class="filter-btn px-4 py-2 rounded-lg border border-indigo-600" data-category="Projects">Projects</button>
       </div>
     </div>
   </section>
 
-  <!-- Video Grid -->
-  <section class="container mx-auto px-6 mt-8 grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id="videoGrid">
-    <!-- Videos loaded dynamically -->
+  <!-- Videos Grid -->
+  <section class="container mx-auto px-6 grid md:grid-cols-2 lg:grid-cols-3 gap-8 mb-16" id="videoGrid">
+    <!-- Video cards populated dynamically -->
   </section>
 
   <!-- Footer -->
   <footer class="bg-gray-900 text-gray-300 py-6 mt-auto text-center">
-    <p>&copy; 2025 CastroHub. All rights reserved.</p>
+    <p>&copy; 2025 CastroHub. All Rights Reserved.</p>
+    <p>Contact: <a href="mailto:castrodhiambo3@gmail.com" class="text-indigo-400">castrodhiambo3@gmail.com</a> | WhatsApp: 0759130506</p>
   </footer>
 
   <!-- Scripts -->
   <script>
-    fetch('mindspark.json')
-      .then(res => res.json())
-      .then(data => {
-        const grid = document.getElementById('videoGrid');
-        data.forEach(video => {
-          grid.innerHTML += `
-            <div class="card bg-white rounded-lg shadow overflow-hidden p-4" data-category="${video.category}">
-              <iframe class="video-iframe" src="${video.url}" allowfullscreen></iframe>
-              <h3 class="text-lg font-semibold mt-2">${video.title}</h3>
-              <span class="text-xs px-2 py-1 rounded-full font-semibold 
-                ${video.category === 'Education' ? 'bg-green-100 text-green-700' :
-                  video.category === 'Tech' ? 'bg-blue-100 text-blue-700' :
-                  video.category === 'Entertainment' ? 'bg-yellow-100 text-yellow-700' :
-                  'bg-pink-100 text-pink-700'}">
-                ${video.category}
-              </span>
+    // Mobile menu toggle
+    const menuToggle = document.getElementById('menuToggle');
+    const navMenu = document.getElementById('navMenu');
+    menuToggle.addEventListener('click', () => navMenu.classList.toggle('hidden'));
+
+    // Sample JSON data for MindSpark TV
+    const videos = [
+      { title: "AI Revolution Explained", category: "Tech", link: "https://www.youtube.com/embed/3JZ_D3ELwOQ", img: "https://i.ytimg.com/vi/3JZ_D3ELwOQ/hqdefault.jpg" },
+      { title: "E-Learning Tips", category: "Education", link: "https://www.youtube.com/embed/dQw4w9WgXcQ", img: "https://i.ytimg.com/vi/dQw4w9WgXcQ/hqdefault.jpg" },
+      { title: "Startup Ideas Showcase", category: "Projects", link: "https://www.youtube.com/embed/L_jWHffIx5E", img: "https://i.ytimg.com/vi/L_jWHffIx5E/hqdefault.jpg" },
+      { title: "Funny Tech Moments", category: "Entertainment", link: "https://www.youtube.com/embed/tgbNymZ7vqY", img: "https://i.ytimg.com/vi/tgbNymZ7vqY/hqdefault.jpg" },
+      { title: "Math Tricks & Tips", category: "Education", link: "https://www.youtube.com/embed/kJQP7kiw5Fk", img: "https://i.ytimg.com/vi/kJQP7kiw5Fk/hqdefault.jpg" },
+      { title: "Coding Challenges", category: "Tech", link: "https://www.youtube.com/embed/uelHwf8o7_U", img: "https://i.ytimg.com/vi/uelHwf8o7_U/hqdefault.jpg" }
+    ];
+
+    const grid = document.getElementById("videoGrid");
+
+    function renderVideos(data) {
+      grid.innerHTML = '';
+      data.forEach(video => {
+        grid.innerHTML += `
+          <div class="video-card bg-white rounded-lg shadow overflow-hidden">
+            <iframe class="w-full h-48" src="${video.link}" allowfullscreen></iframe>
+            <div class="p-4">
+              <span class="bg-indigo-100 text-indigo-700 px-3 py-1 rounded-full text-sm font-semibold">${video.category}</span>
+              <h4 class="font-bold mt-2">${video.title}</h4>
             </div>
-          `;
-        });
+          </div>
+        `;
+      });
+    }
 
-        const filterBtns = document.querySelectorAll('.filter-btn');
-        const cards = document.querySelectorAll('.card');
-        const searchInput = document.getElementById('videoSearch');
+    renderVideos(videos);
 
-        filterBtns.forEach(btn => {
-          btn.addEventListener('click', () => {
-            document.querySelector('.active-filter').classList.remove('active-filter');
-            btn.classList.add('active-filter');
-            const category = btn.dataset.category;
-            cards.forEach(card => {
-              card.style.display = (category === 'all' || card.dataset.category === category) ? 'block' : 'none';
-            });
-          });
-        });
+    // Filter buttons & search
+    const filterButtons = document.querySelectorAll('.filter-btn');
+    const searchInput = document.getElementById('searchInput');
 
-        searchInput.addEventListener('input', () => {
-          const query = searchInput.value.toLowerCase();
-          cards.forEach(card => {
-            card.style.display = card.innerText.toLowerCase().includes(query) ? 'block' : 'none';
-          });
-        });
-      })
-      .catch(err => console.error("Error loading videos:", err));
+    filterButtons.forEach(btn => {
+      btn.addEventListener('click', () => {
+        filterButtons.forEach(b => b.classList.remove('active'));
+        btn.classList.add('active');
+
+        const category = btn.dataset.category;
+        const filtered = category === 'all' ? videos : videos.filter(v => v.category === category);
+        const searchTerm = searchInput.value.toLowerCase();
+        renderVideos(filtered.filter(v => v.title.toLowerCase().includes(searchTerm)));
+      });
+    });
+
+    searchInput.addEventListener('input', () => {
+      const categoryBtn = document.querySelector('.filter-btn.active');
+      const category = categoryBtn.dataset.category;
+      const filtered = category === 'all' ? videos : videos.filter(v => v.category === category);
+      const searchTerm = searchInput.value.toLowerCase();
+      renderVideos(filtered.filter(v => v.title.toLowerCase().includes(searchTerm)));
+    });
   </script>
 </body>
 </html>
