--- a/education.html
+++ b/education.html
@@ -3,109 +3,153 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CastroHub | Education</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <title>Education - CastroHub</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: 'Poppins', sans-serif; }
+    .resource-card:hover { transform: translateY(-5px); transition: all 0.3s; }
+    .filter-btn.active { background-color: #16a34a; color: white; }
+  </style>
 </head>
-<body class="bg-gray-50 text-gray-800">
-  <!-- Navbar -->
-  <nav class="bg-gradient-to-r from-blue-600 to-indigo-600 p-4 shadow-lg">
-    <div class="container mx-auto flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-bold text-white">CastroHub</a>
-      <ul class="flex space-x-6 text-white font-medium">
-        <li><a href="index.html" class="hover:text-yellow-300">Home</a></li>
-        <li><a href="about.html" class="hover:text-yellow-300">About</a></li>
-        <li><a href="news.html" class="hover:text-yellow-300">News</a></li>
-        <li><a href="entertainment.html" class="hover:text-yellow-300">Entertainment</a></li>
-        <li><a href="education.html" class="text-yellow-300 font-semibold">Education</a></li>
-        <li><a href="projects.html" class="hover:text-yellow-300">Projects</a></li>
-        <li><a href="mindspark.html" class="hover:text-yellow-300">MindSpark TV</a></li>
-        <li><a href="contact.html" class="hover:text-yellow-300">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
+<body class="bg-gray-50 flex flex-col min-h-screen">
 
-  <!-- Hero -->
-  <header class="bg-gradient-to-r from-blue-500 to-indigo-600 text-white text-center py-16">
-    <h1 class="text-4xl font-bold">📚 Education Hub</h1>
-    <p class="mt-3 text-lg">Resources, notes, exams, and projects to support learning.</p>
+  <!-- Navbar -->
+  <header class="bg-white shadow-lg sticky top-0 z-50">
+    <div class="container mx-auto flex justify-between items-center py-4 px-6 flex-wrap">
+      <h1 class="text-2xl font-bold text-green-700">CastroHub</h1>
+      <button id="menuToggle" class="block md:hidden text-green-700 text-2xl focus:outline-none">&#9776;</button>
+      <nav id="navMenu" class="hidden md:flex w-full md:w-auto mt-4 md:mt-0">
+        <ul class="flex flex-col md:flex-row md:space-x-6 gap-2 md:gap-0">
+          <li><a href="index.html" class="hover:text-green-600">Home</a></li>
+          <li><a href="about.html" class="hover:text-green-600">About</a></li>
+          <li><a href="news.html" class="hover:text-indigo-600">News</a></li>
+          <li><a href="entertainment.html" class="hover:text-pink-600">Entertainment</a></li>
+          <li><a href="education.html" class="font-semibold text-green-700">Education</a></li>
+          <li><a href="projects.html" class="hover:text-indigo-600">Projects</a></li>
+          <li><a href="mindspark.html" class="hover:text-indigo-600">MindSpark TV</a></li>
+          <li><a href="contact.html" class="hover:text-indigo-600">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <!-- Filters -->
-  <section class="container mx-auto px-6 py-8">
-    <div class="flex flex-wrap justify-between items-center mb-6">
-      <input id="searchBar" type="text" placeholder="Search resources..." 
-             class="w-full md:w-1/3 p-3 border rounded-lg shadow-sm focus:ring focus:ring-indigo-400">
-      <div class="mt-4 md:mt-0 flex space-x-2">
-        <button onclick="filterCategory('All')" class="filter-btn bg-blue-600 text-white px-4 py-2 rounded-lg">All</button>
-        <button onclick="filterCategory('Notes')" class="filter-btn bg-gray-200 px-4 py-2 rounded-lg">Notes</button>
-        <button onclick="filterCategory('Exams')" class="filter-btn bg-gray-200 px-4 py-2 rounded-lg">Exams</button>
-        <button onclick="filterCategory('Projects')" class="filter-btn bg-gray-200 px-4 py-2 rounded-lg">Projects</button>
+  <!-- Hero Section -->
+  <section class="bg-green-50 py-12 text-center">
+    <h2 class="text-4xl font-bold text-green-700">Educational Resources</h2>
+    <p class="mt-3 text-gray-600 max-w-2xl mx-auto">
+      Access notes, past papers, projects, and quizzes across various subjects. Learning made simple and interactive!
+    </p>
+  </section>
+
+  <!-- Filters & Search -->
+  <section class="container mx-auto px-6 mt-8">
+    <div class="flex flex-col md:flex-row md:justify-between md:items-center bg-white p-4 rounded-lg shadow">
+      <div class="flex flex-wrap gap-2">
+        <button class="filter-btn active px-4 py-2 rounded-lg border border-green-600" data-category="all">All</button>
+        <button class="filter-btn px-4 py-2 rounded-lg border border-green-600" data-category="Notes">Notes</button>
+        <button class="filter-btn px-4 py-2 rounded-lg border border-green-600" data-category="Exams">Exams</button>
+        <button class="filter-btn px-4 py-2 rounded-lg border border-green-600" data-category="Projects">Projects</button>
+      </div>
+      <div class="mt-4 md:mt-0">
+        <input id="searchInput" type="text" placeholder="Search resources..." 
+               class="border rounded px-3 py-2 w-64 focus:ring-2 focus:ring-green-500 focus:outline-none">
       </div>
     </div>
+  </section>
 
-    <!-- Dynamic Content -->
-    <div id="resourcesGrid" class="grid md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+  <!-- Resources Grid -->
+  <section class="container mx-auto px-6 mt-10 grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id="resourceGrid">
+    <!-- Resource cards rendered dynamically -->
+  </section>
+
+  <!-- AI Tutor Section -->
+  <section class="container mx-auto px-6 mt-12 bg-white p-6 rounded-lg shadow">
+    <h3 class="text-2xl font-bold text-green-700 mb-4">🤖 AI Tutor</h3>
+    <textarea id="aiInput" placeholder="Ask your educational question..." class="w-full border rounded p-3 mb-3" rows="3"></textarea>
+    <button id="askAI" class="px-4 py-2 bg-green-600 text-white rounded-lg font-semibold hover:bg-green-700">Ask</button>
+    <div id="aiOutput" class="mt-4 p-4 bg-gray-100 rounded-lg min-h-[100px]"></div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-white py-6 mt-10">
-    <div class="container mx-auto text-center">
-      <p>© 2025 CastroHub | Education Hub</p>
+  <footer class="bg-gray-900 text-gray-300 py-6 mt-auto text-center">
+    <div class="container mx-auto">
+      <p>&copy; 2025 CastroHub. All rights reserved.</p>
+      <p>Contact: <a href="mailto:castrodhiambo3@gmail.com" class="text-green-400">castrodhiambo3@gmail.com</a> | WhatsApp: 0759130506</p>
     </div>
   </footer>
 
+  <!-- Scripts -->
   <script>
-    let allResources = [];
+    // Mobile menu toggle
+    const menuToggle = document.getElementById('menuToggle');
+    const navMenu = document.getElementById('navMenu');
+    menuToggle.addEventListener('click', () => navMenu.classList.toggle('hidden'));
 
-    // Fetch JSON content
-    fetch("education.json")
-      .then(res => res.json())
-      .then(data => {
-        allResources = data.resources;
-        renderResources(allResources);
+    // Resources JSON
+    const resources = [
+      { "title": "Mathematics Revision Notes", "category": "Notes", "description": "Complete notes for Algebra, Geometry, and Calculus.", "link": "notes/math.pdf" },
+      { "title": "Computer Studies Past Paper 2022", "category": "Exams", "description": "Final year exam paper with marking scheme.", "link": "exams/computer2022.pdf" },
+      { "title": "Science Project: Solar Energy", "category": "Projects", "description": "A detailed project exploring solar energy for sustainable schools.", "link": "projects/solar.html" },
+      { "title": "Biology Revision", "category": "Notes", "description": "Best revision book for KCSE", "link": "notes/biology.pdf" },
+      { "title": "Mathematics Topical Revision Questions", "category": "Notes", "description": "Contains lots of KCSE revision questions organised per topic", "link": "Assets/maths_topical_revisions.pdf" }
+    ];
+
+    const grid = document.getElementById('resourceGrid');
+
+    function renderResources(data) {
+      grid.innerHTML = '';
+      data.forEach(res => {
+        grid.innerHTML += `
+          <div class="resource-card bg-white rounded-lg shadow p-4" data-category="${res.category}">
+            <h4 class="text-lg font-semibold mb-2">${res.title}</h4>
+            <p class="text-gray-600 mb-3">${res.description}</p>
+            <a href="${res.link}" target="_blank" class="text-green-600 font-semibold hover:underline">View Resource →</a>
+          </div>
+        `;
       });
-
-    function renderResources(resources) {
-      const container = document.getElementById("resourcesGrid");
-      container.innerHTML = resources.map(item => `
-        <div class="bg-white rounded-xl shadow-lg p-5 hover:shadow-xl transition">
-          <h3 class="text-xl font-bold text-indigo-600">${item.title}</h3>
-          <p class="text-sm text-gray-500 mb-2">📂 ${item.category}</p>
-          <p class="mb-4">${item.description}</p>
-          <a href="${item.link}" target="_blank" 
-             class="bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700">
-            Open
-          </a>
-        </div>
-      `).join("");
     }
 
-    // Search Function
-    document.getElementById("searchBar").addEventListener("input", function() {
-      const query = this.value.toLowerCase();
-      const filtered = allResources.filter(r =>
-        r.title.toLowerCase().includes(query) ||
-        r.description.toLowerCase().includes(query) ||
-        r.tags.some(tag => tag.toLowerCase().includes(query))
-      );
-      renderResources(filtered);
+    renderResources(resources);
+
+    // Filters
+    const filterBtns = document.querySelectorAll('.filter-btn');
+    const searchInput = document.getElementById('searchInput');
+
+    filterBtns.forEach(btn => {
+      btn.addEventListener('click', () => {
+        filterBtns.forEach(b => b.classList.remove('active'));
+        btn.classList.add('active');
+
+        const category = btn.dataset.category;
+        const filtered = category === 'all' ? resources : resources.filter(r => r.category === category);
+        const searchTerm = searchInput.value.toLowerCase();
+        renderResources(filtered.filter(r => r.title.toLowerCase().includes(searchTerm)));
+      });
     });
 
-    // Filter Function
-    function filterCategory(category) {
-      document.querySelectorAll(".filter-btn").forEach(btn => {
-        btn.classList.remove("bg-blue-600","text-white");
-        btn.classList.add("bg-gray-200");
-      });
-      event.target.classList.add("bg-blue-600","text-white");
+    searchInput.addEventListener('input', () => {
+      const categoryBtn = document.querySelector('.filter-btn.active');
+      const category = categoryBtn.dataset.category;
+      const filtered = category === 'all' ? resources : resources.filter(r => r.category === category);
+      const searchTerm = searchInput.value.toLowerCase();
+      renderResources(filtered.filter(r => r.title.toLowerCase().includes(searchTerm)));
+    });
 
-      if (category === "All") {
-        renderResources(allResources);
-      } else {
-        renderResources(allResources.filter(r => r.category === category));
-      }
-    }
+    // AI Tutor (frontend only)
+    const askAI = document.getElementById('askAI');
+    const aiInput = document.getElementById('aiInput');
+    const aiOutput = document.getElementById('aiOutput');
+
+    askAI.addEventListener('click', () => {
+      const question = aiInput.value.trim();
+      if(!question) return;
+      aiOutput.innerHTML = `<p>Loading answer for: "<strong>${question}</strong>" ...</p>`;
+      // Simulated AI response (replace with real API later)
+      setTimeout(() => {
+        aiOutput.innerHTML = `<p><strong>AI Tutor:</strong> This is a sample response for your question: "${question}". Use this feature to integrate real AI assistance.</p>`;
+      }, 1000);
+    });
   </script>
 </body>
 </html>
