--- a/projects.html
+++ b/projects.html
@@ -3,31 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CastroHub | Projects</title>
+  <title>Projects - CastroHub</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://kit.fontawesome.com/a2e0e6ad65.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Poppins', sans-serif; }
-    .card:hover { transform: translateY(-5px); transition: all 0.3s; }
-    .active-filter { background-color: #facc15; color: #1f2937; }
+    .project-card:hover { transform: translateY(-5px); transition: all 0.3s; }
+    .filter-btn.active { background-color: #2563eb; color: white; }
   </style>
 </head>
-<body class="bg-gray-100 text-gray-900 flex flex-col min-h-screen">
+<body class="bg-gray-100 flex flex-col min-h-screen">
 
   <!-- Navbar -->
-  <header class="bg-gradient-to-r from-blue-600 to-indigo-700 text-white shadow-lg">
+  <header class="bg-white shadow-lg sticky top-0 z-50">
     <div class="container mx-auto flex justify-between items-center py-4 px-6 flex-wrap">
-      <h1 class="text-2xl font-bold tracking-wide">CastroHub</h1>
-      <nav>
-        <ul class="flex flex-wrap space-x-6">
-          <li><a href="index.html" class="hover:text-yellow-300">Home</a></li>
-          <li><a href="about.html" class="hover:text-yellow-300">About</a></li>
-          <li><a href="news.html" class="hover:text-yellow-300">News</a></li>
-          <li><a href="entertainment.html" class="hover:text-yellow-300">Entertainment</a></li>
-          <li><a href="education.html" class="hover:text-yellow-300">Education</a></li>
-          <li><a href="projects.html" class="font-semibold text-yellow-300">Projects</a></li>
-          <li><a href="mindspark.html" class="hover:text-yellow-300">MindSpark TV</a></li>
-          <li><a href="contact.html" class="hover:text-yellow-300">Contact</a></li>
+      <h1 class="text-2xl font-bold text-indigo-700">CastroHub</h1>
+      <button id="menuToggle" class="block md:hidden text-indigo-700 text-2xl focus:outline-none">&#9776;</button>
+      <nav id="navMenu" class="hidden md:flex w-full md:w-auto mt-4 md:mt-0">
+        <ul class="flex flex-col md:flex-row md:space-x-6 gap-2 md:gap-0">
+          <li><a href="index.html" class="hover:text-indigo-600">Home</a></li>
+          <li><a href="about.html" class="hover:text-indigo-600">About</a></li>
+          <li><a href="news.html" class="hover:text-indigo-600">News</a></li>
+          <li><a href="entertainment.html" class="hover:text-pink-600">Entertainment</a></li>
+          <li><a href="education.html" class="hover:text-green-600">Education</a></li>
+          <li><a href="projects.html" class="font-semibold text-indigo-700">Projects</a></li>
+          <li><a href="mindspark.html" class="hover:text-indigo-600">MindSpark TV</a></li>
+          <li><a href="contact.html" class="hover:text-indigo-600">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -37,84 +39,100 @@
   <section class="bg-blue-50 py-12 text-center">
     <h2 class="text-4xl font-bold text-blue-700">My Projects</h2>
     <p class="mt-3 text-gray-600 max-w-2xl mx-auto">
-      Explore exciting projects I’ve built — from web apps to AI experiments.
+      Explore my projects across Web, AI, Education, and Design — all interactive and innovative.
     </p>
   </section>
 
   <!-- Filters & Search -->
   <section class="container mx-auto px-6 mt-8">
     <div class="flex flex-col md:flex-row md:justify-between md:items-center bg-white p-4 rounded-lg shadow">
-      <div class="flex space-x-4 flex-wrap">
-        <button class="filter-btn px-4 py-2 rounded-lg active-filter" data-category="all">All</button>
-        <button class="filter-btn px-4 py-2 rounded-lg" data-category="web">Web Development</button>
-        <button class="filter-btn px-4 py-2 rounded-lg" data-category="ai">AI & ML</button>
-        <button class="filter-btn px-4 py-2 rounded-lg" data-category="education">Education</button>
-        <button class="filter-btn px-4 py-2 rounded-lg" data-category="design">Design</button>
+      <div class="flex space-x-4 flex-wrap gap-2">
+        <button class="filter-btn active px-4 py-2 rounded-lg border border-indigo-600" data-category="all">All</button>
+        <button class="filter-btn px-4 py-2 rounded-lg border border-indigo-600" data-category="web">Web Development</button>
+        <button class="filter-btn px-4 py-2 rounded-lg border border-indigo-600" data-category="ai">AI & Machine Learning</button>
+        <button class="filter-btn px-4 py-2 rounded-lg border border-indigo-600" data-category="education">Education</button>
+        <button class="filter-btn px-4 py-2 rounded-lg border border-indigo-600" data-category="design">Design</button>
       </div>
       <div class="mt-4 md:mt-0">
         <input id="projectSearch" type="text" placeholder="Search projects..." 
-               class="border rounded px-3 py-2 w-64 focus:ring-2 focus:ring-yellow-400 focus:outline-none">
+               class="border rounded px-3 py-2 w-64 focus:ring-2 focus:ring-indigo-500 focus:outline-none">
       </div>
     </div>
   </section>
 
-  <!-- Project Grid -->
+  <!-- Projects Grid -->
   <section class="container mx-auto px-6 mt-10 grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id="projectGrid">
-    <!-- Cards dynamically generated -->
+    <!-- Project cards rendered dynamically -->
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 text-gray-300 py-6 mt-auto">
-    <div class="container mx-auto text-center">
+  <footer class="bg-gray-900 text-gray-300 py-6 mt-auto text-center">
+    <div class="container mx-auto">
       <p>&copy; 2025 CastroHub. All rights reserved.</p>
+      <p>Contact: <a href="mailto:castrodhiambo3@gmail.com" class="text-indigo-400">castrodhiambo3@gmail.com</a> | WhatsApp: 0759130506</p>
     </div>
   </footer>
 
   <!-- Scripts -->
   <script>
-    fetch('projects.json')
-      .then(res => res.json())
-      .then(data => {
-        const grid = document.getElementById('projectGrid');
-        data.forEach(project => {
-          grid.innerHTML += `
-            <div class="card bg-white rounded-lg shadow overflow-hidden p-4" data-category="${project.category}">
-              <img src="${project.image}" alt="${project.title}" class="w-full h-40 object-cover rounded mb-4">
+    // Mobile menu toggle
+    const menuToggle = document.getElementById('menuToggle');
+    const navMenu = document.getElementById('navMenu');
+    menuToggle.addEventListener('click', () => navMenu.classList.toggle('hidden'));
+
+    // JSON-powered projects data
+    const projects = [
+      { title: "Personal Portfolio", category: "web", description: "A responsive website to showcase my skills and work.", img: "https://source.unsplash.com/400x250/?website" },
+      { title: "AI Tutor", category: "ai", description: "An AI-powered chatbot to assist with learning.", img: "https://source.unsplash.com/400x250/?artificial-intelligence" },
+      { title: "E-Learning Platform", category: "education", description: "A platform for accessing educational materials and quizzes.", img: "https://source.unsplash.com/400x250/?education" },
+      { title: "UI Design Concepts", category: "design", description: "Creative UI/UX concepts for modern web and mobile apps.", img: "https://source.unsplash.com/400x250/?design" },
+      { title: "Tech Startup Showcase", category: "projects", description: "Highlighting innovative startup projects.", img: "https://source.unsplash.com/400x250/?startup" },
+      { title: "Machine Learning Model", category: "ai", description: "A predictive ML model for data analysis.", img: "https://source.unsplash.com/400x250/?machine-learning" }
+    ];
+
+    const grid = document.getElementById("projectGrid");
+
+    function renderProjects(data) {
+      grid.innerHTML = '';
+      data.forEach(project => {
+        grid.innerHTML += `
+          <div class="project-card bg-white rounded-lg shadow overflow-hidden">
+            <img src="${project.img}" alt="${project.title}" class="w-full h-40 object-cover">
+            <div class="p-4">
               <h3 class="text-lg font-semibold">${project.title}</h3>
               <p class="text-sm text-gray-600 mb-2">${project.description}</p>
-              <span class="text-xs px-2 py-1 rounded-full font-semibold ${project.category === 'web' ? 'bg-blue-100 text-blue-700' :
-                                                                          project.category === 'ai' ? 'bg-purple-100 text-purple-700' :
-                                                                          project.category === 'education' ? 'bg-green-100 text-green-700' :
-                                                                          'bg-pink-100 text-pink-700'}">${project.category}</span>
+              <span class="text-xs bg-indigo-100 text-indigo-700 px-2 py-1 rounded">${project.category.charAt(0).toUpperCase() + project.category.slice(1)}</span>
             </div>
-          `;
-        });
+          </div>
+        `;
+      });
+    }
 
-        const filterBtns = document.querySelectorAll('.filter-btn');
-        const cards = document.querySelectorAll('.card');
-        const searchInput = document.getElementById('projectSearch');
+    renderProjects(projects);
 
-        // Filter by category
-        filterBtns.forEach(btn => {
-          btn.addEventListener('click', () => {
-            document.querySelector('.active-filter').classList.remove('active-filter');
-            btn.classList.add('active-filter');
-            const category = btn.dataset.category;
-            cards.forEach(card => {
-              card.style.display = (category === 'all' || card.dataset.category === category) ? 'block' : 'none';
-            });
-          });
-        });
+    // Filter buttons & search
+    const filterButtons = document.querySelectorAll('.filter-btn');
+    const searchInput = document.getElementById('projectSearch');
 
-        // Search functionality
-        searchInput.addEventListener('input', () => {
-          const query = searchInput.value.toLowerCase();
-          cards.forEach(card => {
-            card.style.display = card.innerText.toLowerCase().includes(query) ? 'block' : 'none';
-          });
-        });
-      })
-      .catch(err => console.error("Error loading projects:", err));
+    filterButtons.forEach(btn => {
+      btn.addEventListener('click', () => {
+        filterButtons.forEach(b => b.classList.remove('active'));
+        btn.classList.add('active');
+
+        const category = btn.dataset.category;
+        const filtered = category === 'all' ? projects : projects.filter(p => p.category === category);
+        const searchTerm = searchInput.value.toLowerCase();
+        renderProjects(filtered.filter(p => p.title.toLowerCase().includes(searchTerm)));
+      });
+    });
+
+    searchInput.addEventListener('input', () => {
+      const categoryBtn = document.querySelector('.filter-btn.active');
+      const category = categoryBtn.dataset.category;
+      const filtered = category === 'all' ? projects : projects.filter(p => p.category === category);
+      const searchTerm = searchInput.value.toLowerCase();
+      renderProjects(filtered.filter(p => p.title.toLowerCase().includes(searchTerm)));
+    });
   </script>
 </body>
 </html>
