--- a/news.html
+++ b/news.html
@@ -81,7 +81,7 @@
     // Sample news JSON
     const newsData = [
       { title: "AI Revolution: How CastroHub is Embracing AI", category: "Tech", description: "AI reshaping the way we learn, interact, and create.", link:"#", img:"https://via.placeholder.com/400x250" },
-      { title: "Kenya’s New Curriculum", category: "Education", description: "In-depth look into the new curriculum reforms.", link:"#", img:"https://via.placeholder.com/400x250" },
+      { title: "Kenya’s New Curriculum", category: "Education", description: "In-depth look into the new curriculum reforms.", link:"news/kenya-curriculum.html", img:"https://via.placeholder.com/400x250" },
       { title: "Harambee Stars Qualify for AFCON", category: "Sports", description: "Celebrations across the nation for historic qualification.", link:"#", img:"https://via.placeholder.com/400x250" },
       { title: "Healthy Living Tips", category: "Lifestyle", description: "Discover lifestyle changes for better health.", link:"#", img:"https://via.placeholder.com/400x250" },
       { title: "Kenyan Music Takes Over Africa", category: "Entertainment", description: "New wave of Kenyan artists making waves.", link:"#", img:"https://via.placeholder.com/400x250" },
