--- a/news.html
+++ b/news.html
@@ -85,7 +85,9 @@
       { title: "Harambee Stars Qualify for AFCON", category: "Sports", description: "Celebrations across the nation for historic qualification.", link:"#", img:"https://via.placeholder.com/400x250" },
       { title: "Healthy Living Tips", category: "Lifestyle", description: "Discover lifestyle changes for better health.", link:"#", img:"https://via.placeholder.com/400x250" },
       { title: "Kenyan Music Takes Over Africa", category: "Entertainment", description: "New wave of Kenyan artists making waves.", link:"#", img:"https://via.placeholder.com/400x250" },
-      { title: "Climate Action: A Global Call", category: "Global", description: "World leaders unite for climate initiatives.", link:"#", img:"https://via.placeholder.com/400x250" }
+      { title: "Climate Action: A Global Call", category: "Global", description: "World leaders unite for climate initiatives.", link:"#", img:"https://via.placeholder.com/400x250" },
+      { title: "Trending In Kenya 2025", category: "Global/ Kenya", description: "Have you known what is currently trending in the Country 254!!!", link:"news/trending-kenya-2025.html", img:"https://thumbs.dreamstime.com/b/young-african-american-woman-holding-kenya-flag-smiling-happy-positive-thumb-up-doing-excellent-approval-sign-244739007.jpg?w=768" }
+
     ];
 
     const newsGrid = document.getElementById("newsGrid");
