--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <ul class="flex flex-col md:flex-row md:space-x-6 gap-2 md:gap-0">
           <li><a href="index.html" class="font-semibold text-indigo-700">Home</a></li>
           <li><a href="about.html" class="hover:text-indigo-600">About</a></li>
+          <li><a href="profile.html" class="hover:text-indigo-600">Developer Profile</a></li>
           <li><a href="news.html" class="hover:text-indigo-600">News</a></li>
           <li><a href="entertainment.html" class="hover:text-indigo-600">Entertainment</a></li>
           <li><a href="education.html" class="hover:text-indigo-600">Education</a></li>
