--- a/education.html
+++ b/education.html
@@ -88,11 +88,11 @@
 
     // Resources JSON
     const resources = [
-      { "title": "Mathematics Revision Notes", "category": "Notes", "description": "Complete notes for Algebra, Geometry, and Calculus.", "link": "notes/math.pdf" },
-      { "title": "Computer Studies Past Paper 2022", "category": "Exams", "description": "Final year exam paper with marking scheme.", "link": "exams/computer2022.pdf" },
+      { "title": "Form Two mid term 2 Exams-Mathematics", "category": "exam", "description": "Mathematics Revision.", "link": "Assets/form 2 maths midterm.docx" },
+      { "title": "Computer Studies form 2 Exams Paper", "category": "exam", "description": "Form Two computer studies paper for revision.", "link": "Assets/computer studies f2 MIDTERM EXAM.docx" },
       { "title": "Science Project: Solar Energy", "category": "Projects", "description": "A detailed project exploring solar energy for sustainable schools.", "link": "projects/solar.html" },
       { "title": "Biology Revision", "category": "Notes", "description": "Best revision book for KCSE", "link": "notes/biology.pdf" },
-      { "title": "Mathematics Topical Revision Questions", "category": "Notes", "description": "Contains lots of KCSE revision questions organised per topic", "link": "Assets/maths_topical_revisions.pdf" }
+      { "title": "Mathematics Topical Revision Questions", "category": "Notes", "description": "Contains lots of KCSE revision questions organised per topic", "link": "Assets/maths topical revisions.pdf" }
     ];
 
     const grid = document.getElementById('resourceGrid');
