--- a/education.html
+++ b/education.html
@@ -93,6 +93,8 @@
       { "title": "Science Project: Solar Energy", "category": "Projects", "description": "A detailed project exploring solar energy for sustainable schools.", "link": "projects/solar.html" },
       { "title": "Biology Revision", "category": "Notes", "description": "Best revision book for KCSE", "link": "notes/biology.pdf" },
       { "title": "Mathematics Topical Revision Questions", "category": "Notes", "description": "Contains lots of KCSE revision questions organised per topic", "link": "Assets/maths topical revisions.pdf" }
+      { "title": "Introduction To Computers Notes", "category": "Notes", "description": "A book Written by Castro Odhiambo that Introduces to the basic of Computers. Flowing notes that are easy to understand", "link": "Assets/ACHIEVE HIGHER COMPUTER STUDIES BOOK" }
+
     ];
 
     const grid = document.getElementById('resourceGrid');
