--- a/mindspark.html
+++ b/mindspark.html
@@ -77,7 +77,7 @@
 
     // Sample JSON data for MindSpark TV
     const videos = [
-      { title: "Getting Started With Ms Access| Creating Tables", category: "Education", link: "https://www.youtube.com/watch?v=gyz2758hlEE", img: "https://i.ytimg.com/vi/3JZ_D3ELwOQ/hqdefault.jpg" },
+      { title: "Getting Started With Ms Access| Creating Tables", category: "Education", link: "https://youtu.be/gyz2758hlEE", img: "https://i.ytimg.com/vi/3JZ_D3ELwOQ/hqdefault.jpg" },
       { title: "E-Learning Tips", category: "Education", link: "https://www.youtube.com/embed/dQw4w9WgXcQ", img: "https://i.ytimg.com/vi/dQw4w9WgXcQ/hqdefault.jpg" },
       { title: "Startup Ideas Showcase", category: "Projects", link: "https://www.youtube.com/embed/L_jWHffIx5E", img: "https://i.ytimg.com/vi/L_jWHffIx5E/hqdefault.jpg" },
       { title: "Funny Tech Moments", category: "Entertainment", link: "https://www.youtube.com/embed/tgbNymZ7vqY", img: "https://i.ytimg.com/vi/tgbNymZ7vqY/hqdefault.jpg" },
